2011-01-25	Stephan Linz <linz@li-pro.net>

	* common: upgarde patch sets to u-boot-2010.12 with s2imac support
	* common: upgarde patch sets to linux-2.6.31.13 with s2imac support

2011-01-16	Stephan Linz <linz@li-pro.net>

	* ptxconfig: include and enable new local source mbref-reg-trunk
	* ptxconfig: include and enable new package libuio-0.2.0-rc1
	* ptxconfig: expand devnodes for Xilinx hwicap device files
	* ptxconfig: expand devnodes for uio device files
	* common: adapt uio_of_genirq fixes, PVR for Microblaze v8.00.b
	* common: configure license of devmem2, set to GPL

2010-12-16	Stephan Linz <linz@li-pro.net>

	* ptxconfig: enable i2ctools and introduce a non-udev configuration
	* ptxconfig: enable busybox hexdump
	* common: HOWTO: makes the non-udev configuration as default
	* common: HOWTO: more documentation for xps_iic
	* common: add a FIXME hint to the private udev init script
	* common: adapt I2C patch sets to linux-2.6.31.13

2010-11-22	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: recommending ethernet download without data cache
	* common: upgarde patch sets to u-boot-2010.12-rc1
	* common: upgarde patch sets to linux-2.6.31.13 based on petalinux-tip20101112
	* common: introduce private udev init script to avoid settle timeout errors

2010-11-13	Stephan Linz <linz@li-pro.net>

	* ptxconfig: change hostname to "mbref-devel"

2010-11-08	Stephan Linz <linz@li-pro.net>

	* git: add *.swp patterns to .gitignore

2010-10-10	Stephan Linz <linz@li-pro.net>

	* common: initial import in git and first light on http://gitorious.org/oselas
	* git: add more patterns to .gitignore

2010-09-11	Stephan Linz <linz@li-pro.net>

	* common: initial version oselas-bsp-mbref
