@@ -16,7 +16,7 @@ PTXCONF_PROJECT_VERSION="-0.00"
 PTXCONF_DEVMEM2=m
 # PTXCONF_DEVNODES is not set
 PTXCONF_LIBUIO=m
-PTXCONF_MBREF_REG=m
+PTXCONF_MBREF_UIO=m
 
 #
 # PTXdist Base Configuration       
