@@ -33,7 +33,7 @@ PTXCONF_DEVNODES_UIO_MAJOR=254
 # PTXCONF_DEVNODES_BLK is not set
 PTXCONF_DEVNODES_ICAP=m
 PTXCONF_LIBUIO=m
-PTXCONF_MBREF_REG=m
+PTXCONF_MBREF_UIO=m
 
 #
 # PTXdist Base Configuration       
